--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<style>
-    html {
-        background-color: gray;
-    }
-</style>
+<head>
+    <style>
+        body {
+            background-color: gray;
+        }
+    </style>
+</head>
 <body>
 <h1>Hi</h1>
 </body>
